--- a/src/assets/css/modal.css
+++ b/src/assets/css/modal.css
@@ -1,4 +1,6 @@
-.container1{
+.modal-container1{
+    width: 481px;
+    height: 314px;
     box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
     border-radius: 8px;
     background: var(--vt-c-white);  
@@ -76,7 +78,6 @@
     height: 40px;
     background: #FFF5F5;    
     border: 1px solid #DB524E;    
-    box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
     border-radius: 4px;
     border-color: var(--vt-c-valencia);   
 }
@@ -93,7 +94,7 @@
 }
 
 /* cont2 */
-.con2{
+.modal-con2{
     width: 496px;
     height: 294px;
     background: var(--vt-c-white);    
@@ -117,7 +118,7 @@
 }
 
 /* container 3 */
-.con3{
+.modal-con3{
     width: 496px;
     height: 259px;
     background: var(--vt-c-white);  
@@ -130,7 +131,7 @@
 }
 
 /* container 4 */
-.con4{
+.modal-con4{
     width: 496px;
     height: 393px;
     background: #FFFFFF;
