--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -1,4 +1,4 @@
-.container5{
+.typo-cont5{
     flex-direction: column;
     align-items: flex-start;
     gap: 40px;
@@ -13,7 +13,6 @@
 .Inter-ExtraBold{
     font-family: 'Inter-ExtraBold', sans-serif;
     font-style: normal;
-    font-size: 20px;
     font-weight: 700;
     font-size: 24px;
     line-height: 29px;    
@@ -50,21 +49,6 @@
     align-items: center;
 }
 
-.font-gotham-body-16px{
-    font-family: 'Gotham';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 15px;
-}
-.font-gotham-body-14px{
-    font-family: 'Gotham';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 13px;
-}
-
 .font-style-inter{
     font-family: 'Inter', sans-serif;
     font-size: 20px;
@@ -72,9 +56,17 @@
     display: flex;
     align-items: center;
     color: #000000;
-    border-color: var(--vt-c-black);    
-    padding-left: 20px; 
-    padding-right: 20px;
+    border-color: var(--vt-c-black);
+}
+.font-style-inter-semibold{
+    font-family: 'Inter-semi', sans-serif;
+    font-weight: 600px;
+    font-size: 20px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    color: #000000;
+    border-color: var(--vt-c-black);
 }
 
 .body{
@@ -142,7 +134,6 @@
 .heading3{
     font-family: 'Roboto', sans-serif;  
     font-size: 16px;
-    font-weight:400;
     line-height: 19px;
     display: flex;
     align-items: center;
@@ -210,26 +201,15 @@
     font-size: 20px;
     align-items: center;
     color: #000000;
-    
     border-color: var(--vt-c-black);   
     padding-left: 20px; 
     padding-right: 20px;          
 }
-.font-weight-bold{
-    font-weight: bold;
-}
 
-.inputbox-font{
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-}
-.button-fonts{
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-}
+.border-bottom-1 {
+    border-bottom: 1px solid;
+  }
+
+  .border-top-1 {
+    border-top: 1px solid;
+  }
