--- a/src/assets/css/AddAccount.css
+++ b/src/assets/css/AddAccount.css
@@ -25,7 +25,7 @@
 }
 
 .add-cont3{
-    width: 880px;
+    width: 780px;
     height: 745px;
     background: #FFFFFF;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
@@ -34,7 +34,7 @@
 
 .add-cont4{
     position: absolute;
-    width: 400px;
+    width: 500px;
     height: 745px;
     background: #F3F6FF;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
@@ -82,4 +82,27 @@
     color: #000000;
 }
 
-/* .table-text- */
+.table-text-roboto-reg{
+    font-family: 'Roboto-regular', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 16px;
+    color: #000000;
+}
+
+.table-text-light{
+    font-family: 'Gotham-light', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 15px;
+}
+
+.notes{
+    width: 460px;
+    height: 540px;
+    left: 1008px;
+    top: 299px;
+    background: #FFFFFF;
+    border-radius: 4px;
+}
