Account Manager for QA

--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -195,6 +195,9 @@
   .border-round-4px{
     border-radius: 4px;
   }
+  .border-round16px{
+    border-radius: 16px;
+  }
   /* border Colors */
 
 /* random */
