--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -45,7 +45,7 @@ a{
     --bs-table-hover-color: var(--bs-body-color);
     --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
     width: 100%;
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
     color: var(--bs-table-color);
     vertical-align: top;
     border-color: var(--bs-table-border-color);
