--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,6 +14,8 @@
 @import './css/custom.css';
 @import './/css/licensekey-issue.css';
 @import './/css/AddAccount.css';
+@import './/css/Client-details.css';
+@import './css/borders.css';
 
 @font-face {
   font-family: 'Poppins-regular';
@@ -96,5 +98,3 @@
   font-weight: normal;
   font-style: normal;
 }
-
-
