--- a/src/assets/css/licensekey-issue.css
+++ b/src/assets/css/licensekey-issue.css
@@ -41,7 +41,7 @@
     margin-top: 20px;
 }
 
-/* .form-control {
+.form-control {
     display: block;
     width: 100%;
     padding: 0.375rem 0.75rem;
@@ -54,7 +54,7 @@
     -moz-appearance: none;
     appearance: none;
     border-radius: 0.375rem;
-  } */
+  }
 
 .license-header{
     font-family: 'Roboto-black', sans-serif;  
