--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -58,6 +58,7 @@
   --vt-c-lavender-bush: #FFF5F5;
   --vt-c-english-vermillion:#D4514D;
   --vt-c-marjorelle-blue:#6e41e2;
+  --vt-c-white-smoke:#f4f4f4;
   /* colors */
 
   /* sizes  */
