--- a/src/assets/css/accmanager.css
+++ b/src/assets/css/accmanager.css
@@ -33,12 +33,12 @@
     padding: var(--c-size-10px);
   }
   .dropdown-content-font{
-    font-family: 'Gotham';
-    font-style: normal;
-    color: var(--vt-c-dark-gray);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 19px;
+    font-family: 'Gotham' !important;
+    font-style: normal !important;
+    color: var(--vt-c-dark-gray) !important;
+    font-weight: 700 !important;
+    font-size: 16px !important;
+    line-height: 19px !important;
     display: flex;
     align-items: center;
   }
