--- a/src/assets/css/component-button.css
+++ b/src/assets/css/component-button.css
@@ -212,6 +212,9 @@ input[type="checkbox"].toggle:checked + label::before{
   outline: none;
   box-shadow: none;
 }
+.btn{
+  transition: none!important;
+}
 /* switch  */
 
 /* hovers  */
@@ -220,7 +223,7 @@ input[type="checkbox"].toggle:checked + label::before{
 background-color: var(--vt-c-lavender-blue) !important;
 color: var(--vt-c-white) !important;
 }
-.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th,.table-hover tbody tr:hover .btn-hover  {
   background-color: var(--vt-c-lavender-blue) !important;
   color: var(--vt-c-indigo) !important;
 }
