--- a/src/assets/css/marginsnpaddings.css
+++ b/src/assets/css/marginsnpaddings.css
@@ -73,7 +73,7 @@
   }
 /* margin-bottom  */
 /* margin-x  */
-.mx-10{
+.mx-10px{
     margin-left: var(--c-size-10px);
     margin-right: var(--c-size-10px);
   }
@@ -101,6 +101,12 @@
     margin-top: var(--c-size-10px);
     margin-bottom: var(--c-size-10px);
   }
+
+.my-10px{
+  margin-top: var(--c-size-10px);
+  margin-bottom: var(--c-size-10px);
+}
+
   .my--10px{
     margin-top: -10px !important;
     margin-bottom: -10px !important;
