--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -44,7 +44,7 @@
   --vt-c-eucalyptus: #27AE60;
   --vt-c-valencia: #DB524E;
   --vt-c-light-lavenvalenciader:#e7d6ff; 
-  --vt-c-dark-:#C2423E;
+  --vt-c-dark-valencia:#C2423E;
   --vt-c-lavender-web:#e8e0fa;
   --vt-c-pale-lavender:#dacff7;
   --vt-c-misty-rose:#F9E3E3;
