--- a/src/assets/css/modal.css
+++ b/src/assets/css/modal.css
@@ -1,39 +1,30 @@
-/* containers for modals  */
-.container-modal{
-    width: 481px !important;
-    height: 314px !important;
+.modal-container1{
+    width: 481px;
+    height: 314px;
     box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
     border-radius: 8px;
     background: var(--vt-c-white);  
     border-radius: 16px;
-    padding-top: 10px;
-    padding-bottom: 16px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     padding-left: 20px;
-    padding-right: 21px;
-}
-.container-modal-transferwnership{
-    height: 259px !important;
-    width: 496px !important;
-    font-family:'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 15px;    
-    color: #DB524E;    
-    flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0;
-    margin-top: 10px;
-    border-radius: 16px;
+    padding-right: 20px;
 }
 
+.modal-container-submit-padding{
+    padding:25px;
+    border-radius: 8px;
+}
+.modal-container-taguser{
+    padding:20px;
+    border-radius: 8px;
+}
 
-
-
-/* containers for modals  */
-
-/* fonts for modals  */
-.font-style-roboto{
+.modal-container-width{
+    width: 30%;
+    
+}
+.font-style-roboto-modal{
     font-family: 'Roboto-black', sans-serif;
     font-weight: 900;
     font-size: 32px;
@@ -43,70 +34,7 @@
     color: var(--vt-c-black);
 }
 
-.font-style-gotham{
-    font-family: 'Gotham-light', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 15px;
-    font-weight: 400;
-    display: flex;
-    color: var(--vt-c-black);             
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;            
-}
-/* fonts for modals  */
-
-
-
-.info2{
-    width: 96px;
-    height: 96px;
-}
-
-.modal-header1{
-    font-family: 'Gotham', sans-serif;
-    font-weight: 700;
-    font-size: 24px;
-    font-size: 24px;
-    line-height: 29px;
-    color: var(--vt-c-black);  
-}
-
-.modal1{
-    font-family: 'Gotham', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-}
-
-.form-control{
-    border-style: none;
-    border-radius: 4px;
-
-}
-
-.alert-font{
-    font-style: normal;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-}
-
-.form-control-1{
-    width: 455px;
-    height: 40px;
-    background: #FFF5F5;    
-    border: 1px solid #DB524E;    
-    border-radius: 4px;
-    border-color: var(--vt-c-valencia);   
-}
-
-.modal2{
+.fontfamily-gotham-modal-text{
     font-family: 'Gotham-light', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -114,9 +42,34 @@
     line-height: 19px;  
     align-self: stretch;  
     color: var(--vt-c-black); 
-    display: flex;
+    display: flex;          
 }
 
+.info2{
+    width: 96px;
+    height: 96px;
+}
+
+.modal-header-font{
+    font-family: 'Gotham-meduim', sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    font-size: 24px;
+    line-height: 29px;
+    color: var(--vt-c-black);  
+}
+
+.form-control{
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    color: #666666;
+    border-style: none;
+    box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
+}
 
 
 .form-select{
@@ -130,24 +83,28 @@
     color: var(--vt-c-black); 
 }
 
-/* container 3 */
-
-
-/* container 4 */
-.modal-con4{
-    width: 496px;
-    height: 393px;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 16px;
-    border-color: var(--vt-c-white-smoke);
-    padding-top: 10px;
-    padding-bottom: 16px;
-    padding-left: 20px;
-    padding-right: 21px;
+.font-style-roboto-modal4{
+    font-family:'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 15px;    
+    color: #DB524E;    
+    flex: none;
+    order: 0;
+    align-self: stretch;
+    flex-grow: 0;
+    margin-top: 10px;
 }
-
 
 .icon-calendar{
     font-size: 20px;
+}
+
+.font-admin{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #111111;
 }
