Style Components Update

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -45,7 +45,7 @@
   --vt-c-valencia: #DB524E;
   --vt-c-light-lavenvalenciader:#e7d6ff; 
   --vt-c-dark-valencia:#C2423E;
-  --vt-c-lavender-web:#e8e0fa;
+  --vt-c-lavender-web:#E3DAF9;
   --vt-c-pale-lavender:#dacff7;
   --vt-c-misty-rose:#F9E3E3;
   --vt-c-champagne-pink:#F6D4D3;
