--- a/src/assets/css/component-button.css
+++ b/src/assets/css/component-button.css
@@ -233,3 +233,13 @@ color: var(--vt-c-white) !important;
  }
 /* table hovers  */
 /* hovers  */
+
+/* .radio-colors[type="radio"]:hover {
+  background-color: var(--vt-c-lavender-web) !important;
+} */
+.radio-colors[type=radio]:active{
+  background-color: var(--vt-c-lavender-web) !important;
+}
+.radio-colors:checked{
+background-color: var(--vt-c-indigo) !important;
+}
