--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -73,6 +73,7 @@ a{
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
+    line-height: 19px;
   }
   .font-table-pagination{
     font-family: 'Roboto';
