--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -80,7 +80,7 @@
 }
 @font-face {
   font-family: 'Gotham-book';
-  src: url(../assets/Fonts/Gotham-Font/GothamBook.ttf) format(truetype); 
+  src: url(../assets/Fonts/Gotham-Font/Gotham-Book.otf) format(truetype); 
   font-weight: normal;
   font-style: normal;
 }
