--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -69,7 +69,7 @@ a{
     font-size: 14px;
   }
   .font-table-text{
-    font-family: 'Gotham', sans-serif;
+    font-family: 'Gotham-book', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
