--- a/src/assets/css/accmanager.css
+++ b/src/assets/css/accmanager.css
@@ -9,9 +9,9 @@
   border-radius: 16px !important;
 }
 .dropdown-menu {
-  max-height: 300px; /* Change the height to your desired value */
-  overflow-y: auto;
+  bottom: 2000px;
 }
+
 
 .dropdown {
     position: relative;
