--- a/src/assets/css/component-button.css
+++ b/src/assets/css/component-button.css
@@ -227,8 +227,8 @@ color: var(--vt-c-white) !important;
   background-color: var(--vt-c-lavender-blue) !important;
   color: var(--vt-c-indigo) !important;
 }
-.table-striped>tbody>tr:nth-child(odd)>td, 
-.table-striped>tbody>tr:nth-child(odd)>th {
+.table-striped-custom>tbody>tr:nth-child(odd)>td, 
+.table-striped-custom>tbody>tr:nth-child(odd)>th {
    background-color:#F4F4F4 !important; 
  }
 /* table hovers  */
