--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -43,7 +43,7 @@
   --vt-c-purple-heart: #5500CD;
   --vt-c-eucalyptus: #27AE60;
   --vt-c-valencia: #DB524E;
-  --vt-c-light-lavenvalenciader:#e7d6ff; 
+  --vt-c-light-lavender:#e7d6ff; 
   --vt-c-dark-valencia:#C2423E;
   --vt-c-lavender-web:#e8e0fa;
   --vt-c-pale-lavender:#dacff7;
