--- a/src/assets/css/component-button.css
+++ b/src/assets/css/component-button.css
@@ -48,6 +48,16 @@
     justify-content: center;
     align-items: center;
   }
+  .button-round-modal{
+    border-radius: 50% !important;
+    font-size: var(--c-size-24px);
+    color: var(--vt-c-white);
+    width: var(--c-size-44px);
+    height: var(--c-size-44px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .button-pill{
     border-radius: var(--bs-border-radius-pill);
     font-family: 'Roboto' !important;
