--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -74,6 +74,7 @@ a{
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
+    white-space: nowrap;
     
   }
   .font-table-pagination{
