--- a/src/assets/css/marginsnpaddings.css
+++ b/src/assets/css/marginsnpaddings.css
@@ -9,6 +9,9 @@
   
 /* margin  */
 /* margin-start  */
+.ms-5px{
+  margin-left: var(--c-size-5px);
+}
 .ms-12px{
   margin-left:var(--c-size-7px);
 }
@@ -28,6 +31,9 @@
 /* margin-end  */
 .me-4px{
   margin-right: var(--c-size-4px);
+}
+.me-5px{
+  margin-right: var(--c-size-5px);
 }
 .me-8px{
   margin-right: var(--c-size-8px);
