--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -69,7 +69,7 @@
     background-color: var(--vt-c-lavender-blue)
   }
   .bg-none{
-    background-color: transparent;
+    background-color: transparent !important;
   }
   /* bg Colors  */
 
