--- a/src/assets/css/component-button.css
+++ b/src/assets/css/component-button.css
@@ -30,6 +30,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
+    white-space: nowrap;
   }
   .button-default-margin-none{
     margin-top: 0px !important;
@@ -48,6 +49,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    white-space: nowrap;
   }
   .button-pill{
     border-radius: var(--bs-border-radius-pill);
@@ -62,6 +64,7 @@
     margin-right: var(--c-size-10px);
     margin-top: var(--c-size-10px);
     margin-bottom: var(--c-size-10px);
+    white-space: nowrap;
   }
   .button-pagination{
     border-radius: var(--c-size-4px);
