--- a/src/assets/css/accmanager.css
+++ b/src/assets/css/accmanager.css
@@ -59,3 +59,12 @@
   max-width: 300px !important;
   height: 44px !important;
 }
+
+.flex-container{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
