--- a/src/assets/css/component-button.css
+++ b/src/assets/css/component-button.css
@@ -102,6 +102,7 @@
     margin-left:12px;
     margin-right: 12px;
     background-color: transparent;
+    white-space: nowrap;
   }
 
   .button-tab:hover{
