--- a/src/assets/css/marginsnpaddings.css
+++ b/src/assets/css/marginsnpaddings.css
@@ -55,7 +55,7 @@
   margin-top: 1.5px !important;
 }
 .mt-10px{
-    margin-top: 0.625rem !important;
+    margin-top: var(--c-size-10px) !important;
   }
 .mt-12px{
   margin-top: var(--c-size-12px)
@@ -145,6 +145,9 @@
 }
 .p-10px{
     padding: var(--c-size-10px) !important;
+}
+.pt-10px{
+  padding-top: var(--c-size-10px) ;
 }
 .pt-12px{
   padding-top: var(--c-size-12px) ;
