--- a/src/assets/css/Client-details.css
+++ b/src/assets/css/Client-details.css
@@ -1,8 +1,31 @@
-.add-cont2{
-    position: relative;
-    width: 1536px;
-    height: 1061px;
+.client-cont1{
+    padding: 20px;
     background: #FFFFFF;
+}
+
+.border-color-frenchskyblue{
+  border-top: none; 
+  border-left: none; 
+  border-right: none; 
+  border-width: 1px;
+}
+
+.client-roboto-fonts{
+  font-family: 'Roboto-black', sans-serif;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 28px;
+  display: flex;
+  align-items: center;  
+}
+
+.client-container{
+  width: 895px;
+  height: 745px;
+  box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
+  border-radius: 8px;
+  background: var(--vt-c-white);  
+  border-radius: 16px;
 }
 
 .add-cont3{
@@ -13,10 +36,10 @@
     border-radius: 16px;
 }
 /* container-addaccount-client  */
-.add-cont4{
-    
-    width: 550px;
+.action-cont4{
     height: 745px;
+    width: 497px;
+    padding: 20px;
     background: #F3F6FF;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
@@ -54,4 +77,5 @@
   textarea {
     width: 650px;
     height:535px;
+    border-color: none !important;
  }
