--- a/src/assets/css/licensekey-issue.css
+++ b/src/assets/css/licensekey-issue.css
@@ -1,14 +1,20 @@
 
-.container7{
+/* containers */
+
+.licensekey-container1{
     width: 942px;
-    height: 632px;
     background: var(--vt-c-white); 
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 20px;
+    padding: 20px;
+}
+
+.licensekey-container2{
+    width: 942px;
+    background: var(--vt-c-white);  
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+    padding: 20px;
 }
 
 .icon-x-license{
@@ -50,15 +56,10 @@
     align-items: center;
     color: var(--vt-c-black);
 }
+/* licensekey-arrow-icon */
 
-.container8{
-    width: 942px;
-    height: 404px;
-    background: var(--vt-c-white);  
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 16px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 20px;
+.licensekey-icon-dropdown{
+    position:absolute;
+    left:855px; 
+    bottom: 15px;
 }
