--- a/src/assets/css/accmanager.css
+++ b/src/assets/css/accmanager.css
@@ -68,3 +68,20 @@
   margin: 0;
   list-style: none;
 }
+
+/* scrollbar  */
+.overflow-scroll-x {
+  overflow-x: scroll !important;
+}
+.overflow-scroll-y {
+  overflow-y: scroll !important;
+}
+th{
+  position: sticky;
+  top: 0px;
+  z-index: 1;
+  background-color: var(--vt-c-white);
+}
+/* scrollbar  */
+
+
