--- a/src/assets/css/licensekey-issue.css
+++ b/src/assets/css/licensekey-issue.css
@@ -6,7 +6,6 @@
     background: var(--vt-c-white); 
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
-    padding: 20px;
 }
 
 .licensekey-container2{
@@ -14,7 +13,6 @@
     background: var(--vt-c-white);  
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
-    padding: 20px;
 }
 
 .icon-x-license{
@@ -63,3 +61,22 @@
     left:855px; 
     bottom: 15px;
 }
+
+.license{
+    margin: 20px;
+}
+
+.border-bottom-license {
+    border-bottom: 1px solid;
+    border-color: #F4F4F4;
+  }
+
+  /* size  */
+  .size-licensekey-inputfield{
+    width: 902px;
+    height: 56px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04), 0px 4px 16px rgba(51, 51, 51, 0.08);
+    border-radius: 4px;
+  }
+  /* size  */
