--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -35,6 +35,7 @@
   --vt-c-ghost-white: #F3F6FF;
   --vt-c-white-smoke: #F4F4F4;
   --vt-c-dim-gray: #ACACAC;
+  --vt-c-light-dim-gray: #CCCCCC;
   --vt-c-light-gray:#e6e6e6 ;
   --vt-c-lavender-blue: #C6C7F9;
   --vt-c-cornflower-blue: #6A90FF;
