--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -205,7 +205,7 @@
     border-top: 1px solid;
   }
 
-  /* Add Account fonts */
+  /* Add Account fonts and License key */
 
 .add-account-Roboto-font{
     font-family: 'Roboto-regular', sans-serif;  
