--- a/src/assets/css/licensekey-issue.css
+++ b/src/assets/css/licensekey-issue.css
@@ -1,16 +1,6 @@
-
-/* containers */
-
-.licensekey-container1{
+.licensekey-container{
     width: 942px;
     background: var(--vt-c-white); 
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 16px;
-}
-
-.licensekey-container2{
-    width: 942px;
-    background: var(--vt-c-white);  
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
 }
@@ -80,3 +70,4 @@
     border-radius: 4px;
   }
   /* size  */
+
