--- a/src/assets/css/transform.css
+++ b/src/assets/css/transform.css
@@ -171,6 +171,9 @@
   .mwmc{
     min-width: max-content !important;
   }
+  .width-max{
+    width: 100%;
+  }
   .width-50px{
     width:50px;
   }
