Software License update

--- a/src/assets/css/accmanager.css
+++ b/src/assets/css/accmanager.css
@@ -89,9 +89,8 @@
   height: 640px;
 }
 .size-textarea-licensemanager{
-  min-height: max-content;
-  height:150px !important;
-  max-width: 100%;
+  min-height:150px !important;
+  max-width: 100%; 
 }
 /* size  */
 
