--- a/src/assets/css/borders.css
+++ b/src/assets/css/borders.css
@@ -1,3 +1,12 @@
 asdf{
     background-color: #fff;
 }
+.box-shadow-none{
+    box-shadow: none;
+}
+.box-shadow-none:focus{
+  border-color: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+
+} 
