--- a/src/assets/css/colors.css
+++ b/src/assets/css/colors.css
@@ -122,7 +122,7 @@
   }
   .border-color-frenchskyblue{
     border-style: solid;
-    border-color: var(--vt-c-frenchsky-blue);
+    border-color: var(--vt-c-frenchsky-blue) !important;
   }
   .border-color-cornflowerblue{
     border-style: solid;
