--- a/src/assets/css/licensekey-issue.css
+++ b/src/assets/css/licensekey-issue.css
@@ -1,4 +1,5 @@
 .licensekey-container{
+    min-width: max-content;
     width: 942px;
     background: var(--vt-c-white); 
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
