--- a/src/assets/css/accmanager.css
+++ b/src/assets/css/accmanager.css
@@ -94,4 +94,23 @@
 }
 /* size  */
 
+@media screen and (min-width :700px){
+  .responsive-center{
+    display: flex !important;
+    justify-content: end !important;
+  }
+}
+@media screen and (max-width :700px){
+  .responsive-center{
+    display: flex !important;
+    justify-content: center !important;
+  }
+  .responsive-center-mb-20px{
+    margin-bottom: 20px;
+  }
+}
 
+/* .responsive-center{
+  display: flex !important;
+    justify-content:end !important;
+} */
