--- a/src/assets/css/accmanager.css
+++ b/src/assets/css/accmanager.css
@@ -94,16 +94,16 @@
 }
 /* size  */
 
-@media screen and (min-width :700px){
+@media screen and (min-width :771px){
   .responsive-center{
     display: flex !important;
     justify-content: end !important;
   }
 }
-@media screen and (max-width :700px){
+@media screen and (max-width :770px){
   .responsive-center{
     display: flex !important;
-    justify-content: center !important;
+    justify-content: space-between !important;
   }
   .responsive-center-mb-20px{
     margin-bottom: 20px;
